--- a/Mexico4.html
+++ b/Mexico4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <meta charset="UTF-8">
 <head>
-<title>Travelling</title>
+<title>Mexico</title>
 <style>
 .travel
 {
@@ -21,7 +21,7 @@ color:white;
 <div class="travel"><a id="headings" href="file:///F:/edyoda/mini-project4.html">TRIPS</a>
 <a id="headings" href="file:///F:/edyoda/about4.html">ABOUT</a>
 <a id="headings" href="file:///F:/edyoda/contact4.html">CONTACT</a></div></center>
-<div><img src="https://images.pexels.com/photos/1782567/pexels-photo-1782567.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" width="1350px" height="500px"></div>
+<div><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQj3BtonoFwbGe-_CiStUgRa5gAKfMlEBC0Km68OK_mptP0iifk" width="1350px" height="350px"></div>
 <pre>
 The City of Light draws millions of visitors every year with its unforgettable ambiance. Of course, the divine cuisine and vast art collections deserve 
 some of the credit as well. The gentle River Seine rambles through the city, flanked by stately museums, centuries-old churches, and blocks of Rococo- and 
