--- a/contact4.html
+++ b/contact4.html
@@ -39,6 +39,11 @@ padding-left:20px;
 padding-right:20px;
 color:white;
 }
+.foot{
+background-color:navy;
+padding:1px;
+
+}
 </style>
 </head>
 <body style="margin:0; background-color:lightblue">
@@ -54,6 +59,7 @@ color:white;
 <input id="text" type="text" name="passwd" placeholder="contact Number:" required><br><br><br>
 <center><input class="submit" type="submit" value="Submit"></center>
 </div>
-</form>
+</form><br><br><br><br><br><br><br>
+<footer class="foot"><center><h5 style="color:white;">travelpVr@yahoo.com</h5></center></footer>
 </body>
 </html>
