--- a/mini-project4.html
+++ b/mini-project4.html
@@ -42,18 +42,18 @@ padding-top:32px;
 <table class="tab">
 <tr>
 <td><div id="text"><a href="file:///F:/edyoda/travelling.html "><img id="img" src="https://images.pexels.com/photos/1782567/pexels-photo-1782567.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" width=350px; height=300px;></a><span id="white" style="padding-left:154px;padding-right:154px;">Paris</span></div></td>
-<td><div id="text"><a href=" "><img id="img" src="https://www.telegraph.co.uk/content/dam/Travel/Destinations/Middle%20East/Dubai/an-insiders-guide-to-dubai-lead-image-skyline.jpg?imwidth=450" width=350px; height=300px;></a><span id="white" style="padding-left:150px;padding-right:150px;">Dubai</span></div></td>
-<td><div id="text"><a href=" "><img id="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSfwwFrEsOkYQNjidSsV9MJNDurFj3ZvygYxqDI1XHeUa5xTkcB" width=350px; height=300px;></a><span id="white" style="padding-left:128px;padding-right:128px;">Swizerland</span></td>
+<td><div id="text"><a href="file:///F:/edyoda/Dubai4.html"><img id="img" src="https://www.telegraph.co.uk/content/dam/Travel/Destinations/Middle%20East/Dubai/an-insiders-guide-to-dubai-lead-image-skyline.jpg?imwidth=450" width=350px; height=300px;></a><span id="white" style="padding-left:150px;padding-right:150px;">Dubai</span></div></td>
+<td><div id="text"><a href="file:///F:/edyoda/swizerland.html"><img id="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSfwwFrEsOkYQNjidSsV9MJNDurFj3ZvygYxqDI1XHeUa5xTkcB" width=350px; height=300px;></a><span id="white" style="padding-left:128px;padding-right:128px;">Swizerland</span></td>
 </tr>
 <tr>
-<td><div id="text"><a href=" "><img id="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOD4iqMQTdR3TwwV6wZNWTd0IulXWz8AsiaH0XryrV5JhIXUNF" width=350px; height=300px;><a><span id="white" style="padding-left:150px;padding-right:150px;">Egypt</span></div></td>
-<td><div id="text"><a href=" "><img id="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJhrTj27JK2yHGsBNJBM6BV8irc1xdX4HegSfEJF_9wzEgyMm_Ow" width=350px; height=300px;></a><span id="white" style="padding-left:152px;padding-right:152px;">India</span></div></td>
-<td><div id="text"><a href=" "><img id="img" src="https://image.cnbcfm.com/api/v1/image/105066394-GettyImages-498350103_1.jpg?v=1532563669&w=1400&h=950" width=350px; height=300px;></a><span id="white" style="padding-left:145px;padding-right:115px;">Singapore</span></div></td>
+<td><div id="text"><a href="file:///F:/edyoda/Egypt4.html"><img id="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOD4iqMQTdR3TwwV6wZNWTd0IulXWz8AsiaH0XryrV5JhIXUNF" width=350px; height=300px;><a><span id="white" style="padding-left:150px;padding-right:150px;">Egypt</span></div></td>
+<td><div id="text"><a href="file:///F:/edyoda/India4.html"><img id="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJhrTj27JK2yHGsBNJBM6BV8irc1xdX4HegSfEJF_9wzEgyMm_Ow" width=350px; height=300px;></a><span id="white" style="padding-left:152px;padding-right:152px;">India</span></div></td>
+<td><div id="text"><a href="file:///F:/edyoda/singapore4.html"><img id="img" src="https://image.cnbcfm.com/api/v1/image/105066394-GettyImages-498350103_1.jpg?v=1532563669&w=1400&h=950" width=350px; height=300px;></a><span id="white" style="padding-left:145px;padding-right:115px;">Singapore</span></div></td>
 </tr>
 <tr>
-<td><div id="text"><a href=" "><img id="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQj3BtonoFwbGe-_CiStUgRa5gAKfMlEBC0Km68OK_mptP0iifk" width=350px; height=300px;></a><span id="white" style="padding-left:140px;padding-right:140px;">Mexico</span></div></td>
-<td><div id="text"><a href=" "><img id="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwqTnnKDuLXdijGtsRsQ17hwIuSoBTrTfpGOj8R_YqtQKSdfco" width=350px; height=300px;></a><span id="white" style="padding-left:140px;padding-right:140px;">London</span></div></td>
-<td><div id="text"><a href=" "><img id="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGxObvz8CXb6aMM_kDloBSzvnhpwfXkw2aIhQJhKuHaW93M7a3" width=350px; height=300px;></a><span id="white" style="padding-left:150px;padding-right:120px;">Australia</span></div></td>
+<td><div id="text"><a href="file:///F:/edyoda/Mexico4.html"><img id="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQj3BtonoFwbGe-_CiStUgRa5gAKfMlEBC0Km68OK_mptP0iifk" width=350px; height=300px;></a><span id="white" style="padding-left:140px;padding-right:140px;">Mexico</span></div></td>
+<td><div id="text"><a href="file:///F:/edyoda/London4.html"><img id="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwqTnnKDuLXdijGtsRsQ17hwIuSoBTrTfpGOj8R_YqtQKSdfco" width=350px; height=300px;></a><span id="white" style="padding-left:140px;padding-right:140px;">London</span></div></td>
+<td><div id="text"><a href="file:///F:/edyoda/australia4.html"><img id="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGxObvz8CXb6aMM_kDloBSzvnhpwfXkw2aIhQJhKuHaW93M7a3" width=350px; height=300px;></a><span id="white" style="padding-left:150px;padding-right:120px;">Australia</span></div></td>
 </tr>
 </table>
 </body>
