--- a/mini-project4.html
+++ b/mini-project4.html
@@ -41,7 +41,7 @@ padding-top:32px;
 <center><h2>My Travel Dairy</h2></center>
 <table class="tab">
 <tr>
-<td><div id="text"><a href="file:///F:/edyoda/travelling.html "><img id="img" src="https://images.pexels.com/photos/1782567/pexels-photo-1782567.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" width=350px; height=300px;></a><span id="white" style="padding-left:154px;padding-right:154px;">Paris</span></div></td>
+<td><div id="text"><a href="file:///F:/edyoda/paris4.html "><img id="img" src="https://images.pexels.com/photos/1782567/pexels-photo-1782567.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" width=350px; height=300px;></a><span id="white" style="padding-left:154px;padding-right:154px;">Paris</span></div></td>
 <td><div id="text"><a href="file:///F:/edyoda/Dubai4.html"><img id="img" src="https://www.telegraph.co.uk/content/dam/Travel/Destinations/Middle%20East/Dubai/an-insiders-guide-to-dubai-lead-image-skyline.jpg?imwidth=450" width=350px; height=300px;></a><span id="white" style="padding-left:150px;padding-right:150px;">Dubai</span></div></td>
 <td><div id="text"><a href="file:///F:/edyoda/swizerland.html"><img id="img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSfwwFrEsOkYQNjidSsV9MJNDurFj3ZvygYxqDI1XHeUa5xTkcB" width=350px; height=300px;></a><span id="white" style="padding-left:128px;padding-right:128px;">Swizerland</span></td>
 </tr>
